# micro_ros_setup

config/: client_uros_packages.repos
config/freertos/nucleo_f439zi/: build.sh  client_uros_packages.repos  configure.sh  flash.sh  package.xml
config/freertos/nucleo_f446ze/: board.repos
config/freertos/nucleo_f767zi/: board.repos
config/freertos/olimex-stm32-e407/: board.repos
