<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>firmware</name>
  <version>0.0.0</version>
  <description>Micro-ROS dependecies for FreeRTOS and Nucleo STM32 F439</description>
  <maintainer email="kelly_coffey@me.com">Kelly Coffey</maintainer>
  <license>APL2</license>

  <build_depend>openocd</build_depend>

</package>
